[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/settings.png" type="Texture" id=3]
[ext_resource path="res://assets/logo_big.png" type="Texture" id=4]
[ext_resource path="res://scripts/menus/MainMenu.gd" type="Script" id=5]

[node name="main_menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.269958
anchor_top = 0.0448519
anchor_right = 0.730042
anchor_bottom = 0.905556
margin_left = -0.320007
margin_top = -0.440002
margin_right = 0.319946
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 29
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="menu"]
margin_right = 884.0
margin_bottom = 543.0
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 0
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="logo" type="TextureRect" parent="menu/MarginContainer"]
margin_left = 40.0
margin_right = 844.0
margin_bottom = 503.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="play_btn" type="Button" parent="menu"]
margin_top = 572.0
margin_right = 884.0
margin_bottom = 672.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Jouer"

[node name="collection_btn" type="Button" parent="menu"]
margin_top = 701.0
margin_right = 884.0
margin_bottom = 801.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Collection"

[node name="hbox_edition" type="HBoxContainer" parent="menu"]
margin_top = 830.0
margin_right = 884.0
margin_bottom = 930.0
theme = ExtResource( 1 )
custom_constants/separation = 25

[node name="cards_btn" type="Button" parent="menu/hbox_edition"]
margin_right = 429.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Modifier les cartes"

[node name="deck_btn" type="Button" parent="menu/hbox_edition"]
margin_left = 454.0
margin_right = 884.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Modifier les decks"

[node name="settings_btn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.009
margin_top = 20.379
margin_right = -21.009
margin_bottom = 77.379
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
